# ticket-ingest

./: .gitignore  README.md  ingestion.secret.example  pyproject.toml
.github/workflows/: endor-labs_ci.yml  endor-labs_scan.yml
endor_ticket_ingestion/: __init__.py  __main__.py  common.py  endorlabs_client.py  ingest_by_packagever.py
