[build-system]
requires = ["setuptools >= 58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endor-ticket-ingestion"
description = "Endor Labs secretless scan worker manager"
version = "0.2.1"
authors = [
    { name = "Darren Meyer (Endor Labs)", email = "darren@endor.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "atlassian-python-api==3.34.0"
]

[tool.setuptools]
packages = ["endor_ticket_ingestion"]

[project.scripts]
endor-ticket-ingestion = "endor_ticket_ingestion.__main__:cli"